all the changes should be release payments , user services and clean up of UI
